Update java-jar-jvm.md